Versión funcional del MVP
